<resources>
    <string name="app_name">ReMine</string>
    <string name="title_login">Login Page</string>
    <string name="title_register">Register Page</string>
    <string name="user_email">Email (@example.com)</string>
    <string name="user_password">Password</string>
    <string name="button_login">Login</string>
    <string name="button_register">Register</string>
    <string name="button_go_login">Already Have an Account? Go To Login</string>
    <string name="button_go_register">No Account? Create Your\'s Here</string>
    <string name="back_button">Back</string>
    <string name="add_task">Add Task</string>
    <string name="show_notification">SHOW NOTIFICATION</string>
    <string name="notification_button">Send Notification</string>
    <string name="agree">YES</string>
    <string name="clear_data_message">ARE YOU SURE TO CLEAR THE DATA?</string>
    <string name="greeting">Hello, %s!</string>

    <string-array name="categories">
        <item>Work And Education</item>
        <item>Personal</item>
        <item>Health</item>
    </string-array>

    <string-array name="priorities">
        <item>Low</item>
        <item>Medium</item>
        <item>High</item>
    </string-array>
</resources>