<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/title_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:padding="20dp"
    tools:context=".ui.LoginActivity">

    <TextView
        android:id="@+id/register_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="228dp"
        android:padding="10dp"
        android:text="@string/title_login"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/user_email_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/user_email"
        android:inputType="textEmailAddress"
        android:padding="20dp"
        android:textColorHint="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_text"
        android:layout_marginTop="20dp" />

    <EditText
        android:id="@+id/user_pass_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/user_password"
        android:inputType="textPassword"
        android:padding="20dp"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_email_input"
        android:layout_marginTop="10dp" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/shapedashboard"
        android:text="@string/button_login"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_pass_input"
        android:layout_marginTop="20dp" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:text="@string/button_go_register"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_button"
        android:layout_marginTop="10dp" />

</androidx.constraintlayout.widget.ConstraintLayout>



    <!--
    <?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/title_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp"
        tools:context=".ui.LoginActivity">

        <TextView
            android:id="@+id/register_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/title_login"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/user_email_input"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/user_email"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/white"
            android:padding="20dp"
            android:textSize="18sp"
            android:textStyle="normal" />

        <EditText
            android:id="@+id/user_pass_input"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:textColorHint="#A6BDBDBD"
            android:inputType="textPassword"
            android:padding="20dp"
            android:hint="@string/user_password"/>

        <Button
            android:id="@+id/login_button"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:text="@string/button_login"
            android:textColor="@color/white"
            android:background="@drawable/shapedashboard"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/register_button"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:background="@null"
            android:text="@string/button_go_register"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="normal" />

    </LinearLayout>
    -->